* What is new in gsl-1.5:

** Fixed a small discrepancy in the tolerance calculation of the
one-dimensional brent minimiser.

** Numerical derivatives should now be calculated using the
gsl_deriv_forward, gsl_deriv_central and gsl_deriv_backward functions,
which accept a step-size argument in addition to the position x.  The
original gsl_diff functions (without the step-size) are deprecated.

** Corrected documentation for gsl_ran_hypergeometric_pdf()

** The tridiagonal matrix solvers gsl_linalg_solve_symm_tridiag,
gsl_linalg_solve_tridiag, gsl_linalg_solve_symm_cyc_tridiag,
gsl_linalg_solve_cyc_tridiag now use the GSL_ERROR macro to report
errors, instead of simply returning an error code.  The arguments to
these functions must now use exact lengths with no additional
elements.  For cyclic systems all vectors must be of length N, for
tridiagonal systems the offdiagonal elements must be of length N-1.

** The singular value decomposition routines gsl_linalg_SV_decomp and
gsl_linalg_SV_decomp_mod now handle the SVD of a column vector (N=1,
arbitrary M), which can occur in linear fitting.

** Restored missing header files gsl_const_mks.h and gsl_const_cgs.h.
The incorrect values of the electrical units for gsl_const_cgs
(VACUUM_PERMEABILITY and VACUUM_PERMITTIVITY) have been removed.

** Fixed gsl_linalg_SV_decomp() to avoid an infinite loop when
computing the SVD of matrices containing Inf and Nan.

** Fixed gsl_linalg_balance_columns() to avoid an infinite loop when
rescaling matrices containing Inf and NaN.

** Fixed header file <gsl/gsl_sf_log.h> to include declarations for 
error codes in inline versions of gsl_sf_log functions

** Fixed header file <gsl/gsl_const.h> to include new MKSA and CGSM
header files.

** Added Stefan-Boltzmann constant and Thomson cross section to
physical constants

* What was new in gsl-1.4:

** Added cumulative distribution functions and their inverses for the
continuous random distributions including: gaussian, lognormal, gamma,