@@ -1,3 +1,8 @@
+2004-05-30  Brian Gough  <bjg@network-theory.co.uk>
+
+	* landau.c (gsl_ran_landau): fix potential array bounds overflow
+	by extending array.
+
 2004-04-22  Brian Gough  <bjg@network-theory.co.uk>
 
 	* sphere.c (gsl_ran_dir_3d): removed unnecessary check for s==0.0
