@@ -1,5 +1,7 @@
 * What is new in gsl-1.5:
 
+** Fixed a potential array overflow in gsl_ran_landau.
+
 ** Fixed a small discrepancy in the tolerance calculation of the
 one-dimensional brent minimiser.
 
